// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag styled components StyledAction : StyledAction has correct styles when  1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "borderBottomRightRadius": "$theme.borders.radius400",
  "borderTopRightRadius": "$theme.borders.radius400",
  "cursor": "pointer",
  "display": "flex",
  "marginLeft": "8px",
  "paddingBottom": "8px",
  "paddingLeft": "8px",
  "paddingRight": "8px",
  "paddingTop": "8px",
}
`;

exports[`Tag styled components StyledAction : StyledAction has correct styles when $disabled 1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "borderBottomRightRadius": "$theme.borders.radius400",
  "borderTopRightRadius": "$theme.borders.radius400",
  "cursor": "not-allowed",
  "display": "flex",
  "marginLeft": "8px",
  "paddingBottom": "8px",
  "paddingLeft": "8px",
  "paddingRight": "8px",
  "paddingTop": "8px",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when  1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": undefined,
  "borderRadius": "$theme.borders.radius400",
  "borderWidth": "1px",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "auto",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "paddingBottom": "$theme.sizing.scale100",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale100",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $disabled 1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": undefined,
  "borderRadius": "$theme.borders.radius400",
  "borderWidth": "1px",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "not-allowed",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": ".56",
  "paddingBottom": "$theme.sizing.scale100",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale100",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $isActive 1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": undefined,
  "borderRadius": "$theme.borders.radius400",
  "borderWidth": "1px",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "auto",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "paddingBottom": "$theme.sizing.scale100",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale100",
}
`;

exports[`Tag styled components StyledRoot : StyledRoot has correct styles when $isFocused 1`] = `
Object {
  ":hover": Object {
    "backgroundColor": null,
  },
  "alignItems": "center",
  "backgroundColor": null,
  "borderColor": undefined,
  "borderRadius": "$theme.borders.radius400",
  "borderWidth": "1px",
  "boxSizing": "border-box",
  "color": undefined,
  "cursor": "auto",
  "display": "inline-flex",
  "fontFamily": "$theme.typography.font250.fontFamily",
  "fontSize": "$theme.typography.font250.fontSize",
  "fontWeight": "$theme.typography.font250.fontWeight",
  "height": "$theme.sizing.scale800",
  "justifyContent": "space-between",
  "lineHeight": "$theme.typography.font250.lineHeight",
  "marginBottom": "5px",
  "marginLeft": "5px",
  "marginRight": "5px",
  "marginTop": "5px",
  "opacity": null,
  "paddingBottom": "$theme.sizing.scale100",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale100",
}
`;
